// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes text color based on theme 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontFamily": "IBM Plex Sans",
        "fontSize": 18,
        "fontWeight": "normal",
        "lineHeight": 24,
      }
    }
    use="body1"
  >
    Text
  </Text>
  <Text
    style={
      Object {
        "color": "#4051DB",
        "fontFamily": "IBM Plex Sans",
        "fontSize": 18,
        "fontWeight": "normal",
        "lineHeight": 24,
      }
    }
    use="body1"
  >
    Text
  </Text>
</View>
`;

exports[`includes extra background View if setBackground=true 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3C475B",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontFamily": "IBM Plex Sans",
          "fontSize": 52,
          "fontWeight": "bold",
          "lineHeight": 48,
        }
      }
      use="headline1"
    >
      Text
    </Text>
  </View>
</View>
`;
